# GETorade

./: main.py  pyproject.toml  readme.md
routes/root/: 404.py  index.py
routes/root/example/: complicated.py  getParams.py  postJson.py  returnJson.py
routes/root/example/db/: get.py  put.py
routes/root/v1/app/: tokenBalance.py
routes/root/v1/app/coin/: createCurrency.py  transfer.py
routes/root/v1/app/transaction/: status.py
routes/root/v2/app/coin/: createCurrency.py  issue.py  mint.py  transfer.py
routes/root/v2/app/transaction/: status.py
src/common/db/: aws.py
src/common/db/aws/: db.py
src/common/template/: centeredHtml.py
src/example/complicated/: __emojiArt.py  greetingProcessor.py
template/static/: centeredContent.html
